src/snapshots/libflatterer__tests__full_test_in_object_with_extra-3.snap
---
source: src/lib.rs
expression: output

---
- "table_name,table_title"
- "games,games"
- "games_developer,games_developer"
- "games_platforms,games_platforms"
- "main,main"

