src/snapshots/libflatterer__tests__full_test_in_object_with_extra-6.snap
---
source: src/lib.rs
expression: output

---
- "_link,_link_games,_link_main,name"
- "0.games.0.platforms.0,0.games.0,0,PC"
- "0.games.1.platforms.0,0.games.1,0,Xbox"
- "0.games.1.platforms.1,0.games.1,0,Playstation"

