src/snapshots/libflatterer__tests__full_test_in_object_with_multiple-3.snap
---
source: src/lib.rs
expression: output

---
- "table_name,table_title"
- "games,games"
- "games_platforms,games_platforms"
- "moreGames,moreGames"
- "moreGames_platforms,moreGames_platforms"
- "main,main"

