src/snapshots/libflatterer__tests__full_test_in_object_with_multiple-7.snap
---
source: src/lib.rs
expression: output

---
- "_link,_link_main,id,rating_code,rating_name"
- "0.moreGames.0,0,1,E,Everyone"
- "0.moreGames.1,0,2,E,Everyone"

