src/snapshots/libflatterer__tests__full_test_in_object_with_multiple-8.snap
---
source: src/lib.rs
expression: output

---
- "_link,_link_moreGames,_link_main,name"
- "0.moreGames.0.platforms.0,0.moreGames.0,0,PC"
- "0.moreGames.1.platforms.0,0.moreGames.1,0,Xbox"
- "0.moreGames.1.platforms.1,0.moreGames.1,0,Playstation"

